Fix vertical scrollbar on 1.2 on mobile

--- a/stylesheets/risky.css
+++ b/stylesheets/risky.css
@@ -127,7 +127,7 @@ ol {
   #map {
     overflow-x: auto;
     /* scroll on mobile */
-    height: 680px;
+    height: 682px;
     /* add some height to accomodate the horizontal scroll bar */ } }
 
 .section {
